# linky

./: .dockerignore  .gitignore  .mistralrc  CLAUDE.md  CONFIGURATION.md  Cargo.toml  Dockerfile  Makefile  README.md  TODO.txt  clippy.toml  copy_implants.sh  entrypoint.sh  test_autonome.sh  test_complete.sh  test_completion.sh  test_implants.sh  test_linky.sh  test_simple.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
examples/: linux_implant.txt  simple_demo.rs  windows_implant.txt
links/common/: Cargo.toml
links/common/src/: lib.rs
links/linux/: Cargo.toml  build.rs
links/linux/src/: main.rs  stdlib.rs
links/osx/: Cargo.toml  build.rs
links/osx/src/: stdlib.rs
links/windows/: Cargo.toml  build.rs
links/windows/src/: stdlib.rs
server/: Cargo.toml
server/src/: cli.rs  crypto.rs  error.rs  generate.rs  lib.rs  links.rs  main.rs  routes.rs  server.rs  tasks.rs  ui.rs
server/tests/: basic_tests.rs  cli_tests.rs  protocol.rs  test_integration.rs
server/tests/c2/: mod.rs
server/tests/utils/: mod.rs
src/: lib.rs  main.rs
src/c2/: mod.rs
src/implants/: mod.rs
src/server/: mod.rs
src/utils/: mod.rs
