[package]
name = "linky"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "linky"
path = "src/main.rs"

[dependencies]
actix-web   = { version = "4", features = ["rustls-0_23"] }
rustls      = "0.23"
rcgen       = "0.14"
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4", features = ["clock"] }
uuid        = { version = "1", features = ["v4"] }
rustyline   = "17"
colored     = "3"
base64      = "0.22"
log         = "0.4"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror   = "1.0"
anyhow      = "1.0"
atty        = "0.2"

[dev-dependencies]
criterion = "0.8"
