[package]
name = "linky"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "linky"
path = "src/main.rs"

[lib]
name = "linky"
path = "src/lib.rs"

[dev-dependencies]
actix-rt = "2"

[dependencies]
actix-web   = { version = "4", features = ["rustls-0_23"] }
rustls      = "0.23"
rcgen       = "0.14"
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
chrono      = { version = "0.4", features = ["clock"] }
uuid        = { version = "1", features = ["v4"] }
rustyline   = "17"
colored     = "3"
base64      = "0.22"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror   = "2"
anyhow      = "1"
hex         = "0.4"
rand        = "0.10"
sha2        = "0.10"
aes-gcm     = "0.10"
obfstr      = "0.4"


