[package]
name = "link-osx"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "link-osx"
path = "src/main.rs"

[dependencies]
reqwest    = { version = "0.12", default-features = false, features = ["blocking", "cookies", "json", "rustls-tls"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
