[package]
name = "link-windows"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "link-windows"
path = "src/main.rs"

[dependencies]
reqwest    = { version = "0.12", default-features = false, features = ["blocking", "cookies", "json", "rustls-tls"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
base64     = "0.22"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "processthreadsapi",
    "securitybaseapi",
    "memoryapi",
    "handleapi",
    "winnt",
    "errhandlingapi",
] }
