[package]
name = "link-windows"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "link-windows"
path = "src/main.rs"

[dependencies]
reqwest    = { version = "0.13", default-features = false, features = ["blocking", "cookies", "json", "rustls"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
base64     = "0.22"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
] }
winapi = { version = "0.3", features = ["memoryapi", "processthreadsapi", "winnt"] }
