[package]
name = "link-windows"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "link-windows"
path = "src/main.rs"

[dependencies]
reqwest    = { version = "0.13", default-features = false, features = ["blocking", "cookies", "json", "rustls"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
base64     = "0.22"
num_cpus   = "1.16"
rand       = "0.8"
chrono     = "0.4"
aes-gcm    = "0.10"
sha2       = "0.10"
hex        = "0.4"
obfstr     = "0.4"
link-common = { path = "../common" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
] }
winapi = { version = "0.3", features = ["memoryapi", "processthreadsapi", "winnt"] }
